added auth docs
