# app/Http/Resources/V1/UserResource.php
@@ -14,6 +14,19 @@ class UserResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'first_name' => $this->first_name,
+            'last_name' => $this->last_name,
+            'patronymic' => $this->patronymic,
+            'phone' => $this->phone,
+            'gender' => $this->gender,
+            'email' => $this->email,
+            'email_verified' => !empty($this->email_verified_at),
+            'role' => [
+                'role_id' => $this->role_id,
+                'role_name' => 'user'
+            ],
+        ];
     }
 }
